--- a/CANCHEROS/index.html
+++ b/CANCHEROS/index.html
@@ -10,8 +10,9 @@
 <body>
     <center><img src="cancheros.png"></center>
     <div id="mensaje-bienvenida">
-        <p><strong>Bienvenidos al espacio de reserva exclusivo de la cancha zonal de bonanza bonanza </strong></p>
+        <p><strong>Bienvenidos al espacio de reserva exclusivo de la cancha zonal de bonanza  </strong></p>
     </div> 
+    <h1>agrege</h1>
     <div class="opciones">
         <button class="boton" onclick="irReserva()">Realiza tu reserva</button>
         <button class="boton" onclick="irConsulta()">Consulta tu reserva</button>
